# trajopt

./: CMakeLists.txt
cpp_examples/: CMakeLists.txt  arm_to_cart_target.cpp  arm_to_joint_target.cpp  atlas_utils.cpp  atlas_utils.hpp  position_base.cpp
python_examples/: arm_to_joint_target.py  kinect_drive_and_reach.py  position_base.py
src/cloudproc/: gen_instantiations.py
src/osgviewer/: osgviewer.cpp
src/trajopt/: json_marshal.hpp  problem_description.cpp  problem_description.hpp
